--- a/public/css/pastorder.css
+++ b/public/css/pastorder.css
@@ -4,3 +4,81 @@ tbody.cart-table-conts {
     width: 875px;
     height: 500px;
 }
+
+@media only screen and (max-width: 768px) {
+    .librebais td {
+        width: 14%;
+        text-align: center;
+        font-size: 24px;
+    }
+    .librebais a {
+        font-size: 24px;
+    }
+    button.reorder {
+        font-size: 18px;
+    }   
+    .carted-item-name {
+        width: 300px;
+        text-align: left;
+    }  
+}    
+
+
+@media only screen and (max-width: 568px) {
+    .librebais img {
+        width: 150px;
+    }
+    .librebais a {
+        font-size: 28px;
+    }
+    .librebais td {
+        font-size: 28px;
+    }
+}    
+@media only screen and (max-width: 411px) {
+    .librebais a {
+        font-size: 30px;
+    }
+    .librebais td {
+        width: 14%;
+        text-align: center;
+        font-size: 32px;
+    }
+    button.reorder {
+        font-size: 28px;
+    }
+    .librebais img {
+        width: 200px;
+    }
+    .cartpage-item {
+        position: relative;
+        right: 0rem;
+    }
+    tbody.cart-table-conts {
+        display: block;
+        overflow: auto;
+        width: 875px;
+        height: 675px;
+    }
+    .carted-item-name {
+        width: 350px;
+    }
+}    
+
+@media only screen and (max-width: 320px) {
+    .librebais img {
+        width: 210px;
+    }
+    .carted-item-name {
+        width: 350px;
+    }
+    tbody.cart-table-conts {
+        display: block;
+        overflow: auto;
+        width: 950px;
+        height: 700px;
+    }
+    .carted-item-name {
+        width: 375px;
+    }
+}    
