--- a/public/css/placeorder.css
+++ b/public/css/placeorder.css
@@ -21,7 +21,7 @@
     margin: 0;
     transform: translateY(-51%);
     position: absolute;
-    top: 90%;
+    top: 82%;
     left: 50%;
    
     transform: translate(-50%, -90%);
@@ -147,3 +147,27 @@ img.avatar.img-circle {
         width: 248px;
     }
 }    
+
+@media only screen 
+and (max-width:1366px)
+and (min-width:1024px)
+and (orientation:portrait)
+{
+
+    .order-container {
+        height: 1152px;
+    }
+    .container-form {
+        width: 800px;
+        height: 655px;
+        background-color: #f8f7f7;
+        margin: 0;
+        transform: translateY(-51%);
+        position: absolute;
+        top: 70%;
+        left: 70%;
+        transform: translate(-50%, -90%);
+        border: 1px solid #00000075;
+    }    
+    
+}
