--- a/public/sass/bodystyle.scss
+++ b/public/sass/bodystyle.scss
@@ -17,18 +17,19 @@
   padding-top: 20px;
   color: rgba(255, 255, 255, 0.8);
 }
+
 span.invalid-feedback {
   position: relative;
   top: -9em;
   background-color: white;
 }
 
-
 .container {
   position: relative;
   /*text-align: center;*/
   /*color: #ffffffbf;*/
   max-width: 1920px;
+  width:1903px!important;
 }
 
 .f-icon img {
@@ -163,6 +164,361 @@ a#cancel_reset {
   color: #c4a265;
 }
 
+.shop-container {
+  width: 100%;
+}
+
+.shop-img img {
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  height: 31.25rem;
+  -webkit-filter: brightness(0.5);
+  filter: brightness(0.5);
+}
+
+.shop-anchors {
+  width: auto;
+  font-weight: 700;
+}
+
+.shop-anchors-filter {
+  margin: 2.5625rem 20.8rem;
+}
+
+.shop-sub-container {
+  width: 100%;
+  position: relative;
+}
+
+.shop-item-image img:hover {
+  /*width: 100%;*/
+  -webkit-filter: brightness(50%);
+  filter: brightness(50%);
+  -webkit-transition: 500ms;
+  transition: 500ms;
+}
+
+.shop-company {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 54px;
+  margin: 100px 0;
+  color: #b89352;
+}
+
+.shop-sub-container2 {
+  height: auto;
+}
+
+i.fa.fa-star {
+  color: gold;
+}
+
+.shop-sub-container2 {
+  /*border: solid;*/
+  width: 281px;
+  line-height: 42px;
+}
+
+.shop-sub-conts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: space-evenly;
+  margin-bottom: 67px;
+}
+
+.shop-sorting a {
+  color: #c4a26561;
+  font-size: 20px;
+}
+
+.shop-sorting a:hover, .shop-sorting a:active {
+  color: #c4a265;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.shop-sub-container3 {
+  width: 53%;
+  height: auto;
+  padding: 31px 0;
+}
+
+.shop-items-conts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  /*width: 85%;*/
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+}
+
+.shop-sorting {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  /*padding: 0 208px 0px 20px;*/
+}
+
+.some-shop-info {
+  width: 231px;
+  height: auto;
+}
+
+.shop-conts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+}
+
+
+
+.shop-filters {
+  width: 450px;
+  border-radius: 5px;
+  padding: 14px 28px;
+  border: solid #c4a256;
+}
+
+.filter-cat ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.filter-cat ul li::before {
+  color: #c4a265;
+  content: "\2022";
+  padding-right: 13px;
+  font-size: 24px;
+}
+
+.filter-cat ul li a:hover {
+  color: #c4a265;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+}
+
+.shop-info-price {
+  font-weight: normal;
+  font-size: 19px;
+  line-height: 1;
+  letter-spacing: 0.01em;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  padding: 10px 0px;
+}
+
+.shop-item-name {
+  padding: 0px 0px 10px 0px;
+}
+
+.shop-item-name:hover {
+  color: #c4a265;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.shop-item-name-col .col-item-title:hover {
+  color: #c4a265;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.shop-item-price {
+  color: #c4a265;
+  width: 100%;
+  text-align: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+/*.shop-item-image:hover .shop-cart-icon img{
+    display: block;
+}
+.shop-cart-icon img {
+    height: 59px;
+    position: absolute;
+    top: 0;
+    margin: 100px 122px;
+    display: none;
+}*/
+.shop-item-image:hover .shop-cart-icon i {
+  display: block;
+}
+
+.shop-cart-icon i {
+  position: absolute;
+  top: 0;
+  margin: 74px 113px;
+  display: none;
+  color: #ccc;
+  font-size: 36px;
+  padding: 18px;
+  border-radius: 50%;
+}
+
+.shop-cart-icon i:hover {
+  color: #fff;
+  background: #c4a265;
+}
+
+/*.shop-cart-icon i:hover*/
+.shop-item-image {
+  position: relative;
+}
+
+.sort-items select {
+  font-size: 17px;
+  border: unset;
+  outline: none;
+}
+
+.shop-item-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.shop-item-info span {
+  color: #6c5e5e;
+}
+
+.shop-item-info {
+  line-height: 29px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.shop-price-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.shop-name-col {
+  padding: 10px 21px;
+  text-align: left;
+  width: 100%;
+}
+
+.shop-col-addcart {
+  padding: 23px;
+}
+
+.col-add {
+  background: #c4a265;
+}
+
+.col-add:hover {
+  color: #fff;
+}
+
+.paginate {
+  text-align: center;
+  padding: 34px 0;
+  font-size: 25px;
+  height: 50px;
+}
+
+.paginate span {
+  padding: 10px;
+}
+
+.paginate span a {
+  padding: 0px 9px;
+  border-radius: 50%;
+}
+
+.paginate span:hover {
+  background: #c4a265;
+  color: #fff;
+  border-radius: 50%;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.paginate .active {
+  background: #c4a265;
+  color: #fff;
+  border-radius: 50%;
+}
+
+.shop-anchors span.active {
+  color: #c4a265;
+}
+
+.filter-btn {
+  display: none;
+}
+
+span.close-btn {
+  display: none;
+}
+
+.parag span {
+  font-size: 20px;
+}
+
+.parag {
+  width: 100%;
+  padding: 19px 0;
+  line-height: 30px;
+  color: #877575;
+}
+
+.col-price {
+  width: 100%;
+  text-align: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.cart-shop-button {
+  width: 100%;
+}
+
+button.addcart {
+  width: 50%;
+  height: 56px;
+  color: #fff;
+  background: #c4a256;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.shop-item-name-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
 
 @media screen and (max-width: 768px) {
   span.close-btn {
@@ -337,6 +693,11 @@ input {
 }
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) and (orientation: portrait) {
+
+  .container{
+
+    width: 1440px!important;
+  }
   .login-reg-form {
     width: 800px;
     border: solid #cf9d71;
@@ -371,6 +732,10 @@ input {
 }
 
 @media only screen and (max-width: 1366px) and (min-width: 1024px) and (orientation: portrait) {
+
+  .container{
+    width: 1111px!important;
+  }
   .login-reg-form {
     width: 800px;
     border: solid #cf9d71;
@@ -407,6 +772,61 @@ input {
     text-align: -webkit-center;
     height: 1250px;
   }
+
+  .container{
+
+    width: 1266px!important;
+  }
+  .headmenu {
+    display: flex;
+    height: 200px;
+    padding: 22px 0;
+}
+.des-logo img {
+  width: 240px!important;
+}
+.search-icon img {
+  width: 78px;
+  height: 68px;
+  margin-right: 10px;
+}
+.headmenu .icons .icons3 {
+  margin-top: 7px;
+  width: 78px;
+  height: 68px;
+}
+.headmenu .icons .icons2 {
+  width: 78px;
+  height: 68px;
+}
+button.menu-toggle {
+  width: 100%;
+  height: 5.6875rem;
+  font-size: 63px;
+  border-radius: 7px;
+}
+.topnav.responsive .ordinary {
+  font-size: 38px;
+}
+  .footer-contact-info {
+    line-height: 53px;
+}
+.info-contacts {
+  font-size: 32px;
+}
+span.sp {
+  font-size: 37px;
+}
+.copyright {
+  font-size: 25px;
+  width: 31%;
+}
+.image-cont img {
+  width: 301px;
+}
+.image-cont {
+  height: 580px;
+}
   .login-reg-form {
     width: 800px;
     border: solid #2a2c2f;
@@ -432,8 +852,8 @@ input {
     display: flex;
     width: 101%;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
   }
   .signup-inputs {
     width: 130%;
@@ -448,58 +868,116 @@ input {
     right: 4rem;
   }
   .login-body {
-  background-image: url(../asset/img/599.jpg);
-  padding: 102px 0;
-  text-align: -webkit-center;
-  height: 1254px;
-}
-.login-reg-form {
-  width: 1260px;
-  border: solid #2a2c2f;
-  background: #2a2c2fc7;
-  border-radius: 5px;
-  height: 1100px;
-
-}
-form.form-signin {
-  width: 316% !important;
-  position: relative;
-  left: -24rem !important;
-  /* height: 168px; */
-  font-size: 27px !important;
-}
-button.btn.facebook-btn.social-btn {
-  height: 135px !important;
-  font-size: 50px !important;
-}
-button.btn.google-btn.social-btn {
-  height: 135px !important;
-  font-size: 50px !important;
-}
-.login-reg-form input::placeholder{
-
-  font-size:40px !important;
-}
-.login-reg-form input {
-  height: 128px !important;
-  font-size: 47px !important;
-}
-.btn-primary#btn-signup {
-  height: 135px !important;
-  /* width: 90%; */
-  font-size: 60px !important;
-}
-button.btn.btn-success.btn-block {
-  height: 135px !important;
-  width: 100% !important;
-  font-size: 60px !important;
-}
-.forgot-pass a {
-  font-size: 46px !important;
-}
+    background-image: url(../asset/img/599.jpg);
+    padding: 102px 0;
+    text-align: -webkit-center;
+    height: 1254px;
+  }
+  .login-reg-form {
+    width: 1260px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+    height: 1100px;
+  }
+  form.form-signin {
+    width: 316% !important;
+    position: relative;
+    left: -24rem !important;
+    /* height: 168px; */
+    font-size: 27px !important;
+  }
+  button.btn.facebook-btn.social-btn {
+    height: 135px !important;
+    font-size: 50px !important;
+  }
+  button.btn.google-btn.social-btn {
+    height: 135px !important;
+    font-size: 50px !important;
+  }
+  .login-reg-form input::-webkit-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input:-ms-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input::-ms-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input::placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input {
+    height: 128px !important;
+    font-size: 47px !important;
+  }
+  .btn-primary#btn-signup {
+    height: 135px !important;
+    /* width: 90%; */
+    font-size: 60px !important;
+  }
+  button.btn.btn-success.btn-block {
+    height: 135px !important;
+    width: 100% !important;
+    font-size: 60px !important;
+  }
+  .forgot-pass a {
+    font-size: 46px !important;
+  }
 }
 
 @media only screen and (max-width: 360px) and (min-width: 320px) and (orientation: portrait) {
+
+  .container{
+    width:1280px!important;
+
+  }
+  .headmenu {
+    display: flex;
+    height: 200px;
+    padding: 22px 0;
+}
+.des-logo img {
+  width: 240px!important;
+}
+.search-icon img {
+  width: 78px;
+  height: 68px;
+  margin-right: 10px;
+}
+.headmenu .icons .icons3 {
+  margin-top: 7px;
+  width: 78px;
+  height: 68px;
+}
+.headmenu .icons .icons2 {
+  width: 78px;
+  height: 68px;
+}
+button.menu-toggle {
+  width: 100%;
+  height: 5.6875rem;
+  font-size: 63px;
+  border-radius: 7px;
+}
+.topnav.responsive .ordinary {
+  font-size: 38px;
+}
+  .info-contacts {
+    font-size: 33px;
+    width: 29%;
+}
+.footer-contact-info {
+  line-height: 57px;
+}
+span.sp {
+  width: 65%;
+  font-size: 35px;
+  line-height: 28px;
+}
+.copyright {
+  font-size: 23px;
+}
   .login-reg-form {
     width: 950px;
     border: solid #2a2c2f;
@@ -510,7 +988,7 @@ button.btn.btn-success.btn-block {
     padding: 13px 5px;
     color: #c4a265;
     font-size: 35px;
-}
+  }
   form.form-signup {
     width: 300%;
     position: relative;
@@ -528,65 +1006,129 @@ button.btn.btn-success.btn-block {
     height: 130px !important;
     width: 100% !important;
     font-size: 50px !important;
-
   }
-  .footer-desc.footer-gallery {
-    display: none;
-}
-.login-body {
-  background-image: url(../asset/img/599.jpg);
-  padding: 102px 0;
-  text-align: -webkit-center;
-  height: 1304px;
-}
-.login-reg-form {
-  width: 1260px;
-  border: solid #2a2c2f;
-  background: #2a2c2fc7;
-  border-radius: 5px;
-  height: 1145px;
 
-}
-form.form-signin {
-  width: 316% !important;
-  position: relative;
-  left: -24rem !important;
-  /* height: 168px; */
-  font-size: 27px !important;
-}
-button.btn.facebook-btn.social-btn {
-  height: 135px !important;
-  font-size: 50px !important;
-}
-button.btn.google-btn.social-btn {
-  height: 135px !important;
-  font-size: 50px !important;
-}
-.login-reg-form input::placeholder{
-
-  font-size:40px !important;
-}
-.login-reg-form input {
-  height: 128px !important;
-  font-size: 47px !important;
-}
-.btn-primary#btn-signup {
-  height: 135px !important;
-  /* width: 90%; */
-  font-size: 60px !important;
-}
-button.btn.btn-success.btn-block {
-  height: 135px !important;
-  width: 100% !important;
-  font-size: 60px !important;
-}
-.forgot-pass a {
-  font-size: 46px !important;
-}
-
+  .login-body {
+    background-image: url(../asset/img/599.jpg);
+    padding: 102px 0;
+    text-align: -webkit-center;
+    height: 1304px;
+  }
+  .login-reg-form {
+    width: 1260px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+    height: 1145px;
+  }
+  form.form-signin {
+    width: 316% !important;
+    position: relative;
+    left: -24rem !important;
+    /* height: 168px; */
+    font-size: 27px !important;
+  }
+  button.btn.facebook-btn.social-btn {
+    height: 135px !important;
+    font-size: 50px !important;
+  }
+  button.btn.google-btn.social-btn {
+    height: 135px !important;
+    font-size: 50px !important;
+  }
+  .login-reg-form input::-webkit-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input:-ms-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input::-ms-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input::placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input {
+    height: 128px !important;
+    font-size: 47px !important;
+  }
+  .btn-primary#btn-signup {
+    height: 135px !important;
+    /* width: 90%; */
+    font-size: 60px !important;
+  }
+  button.btn.btn-success.btn-block {
+    height: 135px !important;
+    width: 100% !important;
+    font-size: 60px !important;
+  }
+  .forgot-pass a {
+    font-size: 46px !important;
+  }
 }
 
 @media only screen and (max-width: 540px) and (min-width: 411px) and (orientation: portrait) {
+  .container{
+    
+    width: 1440px!important;
+  
+  }
+  .headmenu {
+    /* height: 100px; */
+    height: 200px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.des-logo img {
+  width: 250px;
+}
+.search-icon img {
+  width: 78px;
+  margin-right: 15px;
+  height: 68px;
+  cursor: pointer;
+}
+.headmenu .icons .icons3 {
+  width: 78px;
+  height: 68px;
+}
+.headmenu .icons .icons2 {
+  width: 78px;
+  height: 68px;
+}
+button.menu-toggle {
+  width: 100%;
+  height: 71px;
+  font-size: 22px;
+  color: #fff;
+  background-color: #c4a265;
+  border-radius: 9px;
+  outline: none;
+  font-size: 45px;
+}
+.topnav.responsive .ordinary {
+  font-size: 34px;
+}
+  .info-contacts {
+    font-size: 57px;
+}
+span.sp {
+  font-size: 42px;
+}
+.footer-contact-info {
+  line-height: 97px;
+}
+.copyright {
+  font-size: 24px;
+  width: 30%;
+}
+.image-cont {
+  height: 401px;
+}
+.image-cont img {
+  width: 274px;
+}
   .login-reg-form {
     width: 1000px;
     border: solid #2a2c2f;
@@ -606,65 +1148,91 @@ button.btn.btn-success.btn-block {
     position: relative;
     right: 30px;
   }
-
-.login-body {
-  background-image: url(../asset/img/599.jpg);
-  padding: 102px 0;
-  text-align: -webkit-center;
-  height: 1254px;
-}
-.login-reg-form {
-  width: 1360px;
-  border: solid #2a2c2f;
-  background: #2a2c2fc7;
-  border-radius: 5px;
-  height: 1100px;
-
-}
-form.form-signin {
-  width: 316% !important;
-  position: relative;
-  left: -24rem !important;
-  /* height: 168px; */
-  font-size: 27px !important;
-}
-button.btn.facebook-btn.social-btn {
-  height: 135px !important;
-  font-size: 50px !important;
-}
-button.btn.google-btn.social-btn {
-  height: 135px !important;
-  font-size: 50px !important;
-}
-.login-reg-form input::placeholder{
-
-  font-size:40px !important;
-}
-.login-reg-form input {
-  height: 128px !important;
-  font-size: 47px !important;
-}
-.btn-primary#btn-signup {
-  height: 135px !important;
-  /* width: 90%; */
-  font-size: 60px !important;
-}
-button.btn.btn-success.btn-block {
-  height: 135px !important;
-  width: 100% !important;
-  font-size: 60px !important;
-}
-.forgot-pass a {
-  font-size: 46px !important;
-}
-.sign-up {
-  height: 130px !important;
-  width: 100% !important;
-  font-size: 50px !important;
-}
+  .login-body {
+    background-image: url(../asset/img/599.jpg);
+    padding: 102px 0;
+    text-align: -webkit-center;
+    height: 1254px;
+  }
+  .login-reg-form {
+    width: 1360px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+    height: 1100px;
+  }
+  form.form-signin {
+    width: 316% !important;
+    position: relative;
+    left: -24rem !important;
+    /* height: 168px; */
+    font-size: 27px !important;
+  }
+  button.btn.facebook-btn.social-btn {
+    height: 135px !important;
+    font-size: 50px !important;
+  }
+  button.btn.google-btn.social-btn {
+    height: 135px !important;
+    font-size: 50px !important;
+  }
+  .login-reg-form input::-webkit-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input:-ms-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input::-ms-input-placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input::placeholder {
+    font-size: 40px !important;
+  }
+  .login-reg-form input {
+    height: 128px !important;
+    font-size: 47px !important;
+  }
+  .btn-primary#btn-signup {
+    height: 135px !important;
+    /* width: 90%; */
+    font-size: 60px !important;
+  }
+  button.btn.btn-success.btn-block {
+    height: 135px !important;
+    width: 100% !important;
+    font-size: 60px !important;
+  }
+  .forgot-pass a {
+    font-size: 46px !important;
+  }
+  .sign-up {
+    height: 130px !important;
+    width: 100% !important;
+    font-size: 50px !important;
+  }
 }
 
 @media only screen and (max-width: 300px) and (min-width: 280px) {
+
+  .container {
+    position: relative;
+    width: 950px!important;
+}
+.social-media-icons a img {
+  width: 72px;
+  height: 100px;
+}
+.headmenu .des-logo .logos {
+  width: 250px;
+}
+.headmenu .icons .icons2 {
+  width: 137px;
+  height: 97px;
+}
+button.btn.facebook-btn.social-btn, button.btn.google-btn.social-btn {
+  height: 51px;
+  font-size: 22px;
+}
   .login-reg-form {
     width: 759px;
     border: solid #2a2c2f;
@@ -729,5 +1297,4 @@ button.btn.btn-success.btn-block {
     right: 24px;
   }
 }
-
 /*# sourceMappingURL=bodystyle.css.map */
