--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -378,7 +378,7 @@ i.fa.fa-star {
 
 .shop-cart-icon i:hover {
   color: #fff;
-  background: #c4a265;
+  /*background: #c4a265;*/
 }
 
 /*.shop-cart-icon i:hover*/
